In Progress - Report 360

--- a/displaytabs/tabs/AccountingUI/BankingProfileMain.html
+++ b/displaytabs/tabs/AccountingUI/BankingProfileMain.html
@@ -1,5 +1,5 @@
 <div style="display: flex; flex: 100%;">
-    <input rowIndex="0" type="hidden" class="form-control editRecord subRecordSearchFilter" module="BankingUI" name="BankingId">
+    <input rowIndex="0" type="hidden" class="form-control editRecord mainRecordId" module="BankingUI" name="BankingId">
     <input rowIndex="0" type="hidden" class="form-control editRecord" module="BankingUI" name="code">
     <div class="form-group" style="flex: 3; margin-left: 10px;">
         <label class="control-label">Bank</label>
