--- a/displaytabs/tabs/AccountingUI/BankingSearch.html
+++ b/displaytabs/tabs/AccountingUI/BankingSearch.html
@@ -3,8 +3,14 @@
 <div class="box box-default">
     <div class="box-header ui-sortable-handle">
         <i class="fa fa-users"></i>
-
         <h3 class="box-title">Search</h3>
+        <div class="box-tools pull-right" data-toggle="tooltip" title="" data-original-title="Status">
+            <div style="display: flex;">
+                <div style="display: flex; margin-top: 5px; margin-left: 10px;" class="hand btnRecordDownloadCSV" module="BankingUI">
+                    <i class="fa fa-fw fa-download" style="margin-top: 5px;"></i> <i>CSV</i>
+                </div>
+            </div>
+        </div>
     </div>
     <div class="box-body"> 
         <div class="form-group">
