In Progress - Report UI

--- a/displaytabs/AccountingUI-MainTemplate.html
+++ b/displaytabs/AccountingUI-MainTemplate.html
@@ -54,11 +54,6 @@
                         </pre>
                     </div>
                     <div class="tab-pane" id="Banking">
-                        <pre style="display: none;">
-                            This needs to connect to banks
-                            -- Bank Rule
-                            <a href="https://youtu.be/L2Iy2FuzTRo" target="_blank">Video</a>                                                        
-                        </pre>
                         <div style="display: flex; background: #ecf0f5;">
                             <div style="flex: 75%; margin: 15px 0px;">
                                 <div class="box box-warning">
@@ -66,8 +61,10 @@
                                         <h3 class="box-title">Bank Account</h3>
                                         <div class="box-tools pull-right" data-toggle="tooltip" title="" data-original-title="Status">
                                             <button type="button" class="btn btn-success btnSaveRecord" module="BankingUI">Save Bank Account</button>
-                                            <button type="button" class="btn btn-info btnNewRecord" module="BankingUI"><i
-                                                    class="fa fa-plus"></i> New Bank Account</button>
+                                            <button type="button" class="btn btn-info btnNewRecord" module="BankingUI">
+                                                <i class="fa fa-plus"></i> New Bank Account</button>
+                                            <button type="button" class="btn btn-info btnReport" MainMenu="AccountingUI" module="BankingUI" style="margin-left: 10px;">
+                                                <i class="fa fa-file-text-o"></i> Report</button>
                                         </div>
                                     </div>
                                     <!-- /.box-header -->
