In Progress - Banking

--- a/displaytabs/tabs/AccountingUI/BankingTransactions.html
+++ b/displaytabs/tabs/AccountingUI/BankingTransactions.html
@@ -32,7 +32,7 @@
                     </div>
                     <div style="flex: 2;">
                         <input rowIndex="----" name="transactionDate" module="BankingTransactionUI" parentModule="BankingUI" type="text"
-                            class="form-control editRecord calendar autoSaveSubRecord" placeholder=""/>
+                            class="form-control editRecord calendar autoSaveSubRecord" placeholder="" disabled/>
                     </div>
                     <div style="flex: 4;">
                         <input rowIndex="----" name="description" module="BankingTransactionUI" parentModule="BankingUI" type="text"
@@ -44,15 +44,15 @@
                     </div>
                     <div style="flex: 2;">
                         <input rowIndex="----" name="tax" module="BankingTransactionUI" parentModule="BankingUI" type="text"
-                            class="form-control editRecord autoSaveSubRecord" placeholder="">
+                            class="form-control editRecord autoSaveSubRecord" placeholder="" disabled>
                     </div>
                     <div style="flex: 2;">
                         <input rowIndex="----" name="spent" module="BankingTransactionUI" parentModule="BankingUI" type="text"
-                            class="form-control editRecord autoSaveSubRecord" placeholder="">
+                            class="form-control editRecord autoSaveSubRecord" placeholder="" disabled>
                     </div>
                     <div style="flex: 2;">
                         <input rowIndex="----" name="received" module="BankingTransactionUI" parentModule="BankingUI" type="text"
-                            class="form-control editRecord autoSaveSubRecord" placeholder="">
+                            class="form-control editRecord autoSaveSubRecord" placeholder="" disabled>
                     </div>
                     <div style="flex: 4;">
                         <div class="input-group" style="width: 100%;">
