In Progress - Banking

--- a/displaytabs/tabs/AccountingUI/BankingTransactions.html
+++ b/displaytabs/tabs/AccountingUI/BankingTransactions.html
@@ -54,6 +54,10 @@
                         <input rowIndex="----" name="received" module="BankingTransactionUI" parentModule="BankingUI" type="text"
                             class="form-control editRecord autoSaveSubRecord" placeholder="" disabled>
                     </div>
+                    <div style="flex: 2;">
+                        <input rowIndex="----" name="balance" module="BankingTransactionUI" parentModule="BankingUI" type="text"
+                            class="form-control editRecord autoSaveSubRecord" placeholder="" disabled>
+                    </div>
                     <div style="flex: 4;">
                         <div class="input-group" style="width: 100%;">
                             <input rowIndex="----" type="text" class="form-control autocomplete editRecordAutoComplete" name="matchAccountCode"
@@ -105,6 +109,9 @@
                     </div>
                     <div class="text-center" style="flex: 2;">
                         <b>Received</b>
+                    </div>
+                    <div class="text-center" style="flex: 2;">
+                        <b>Balance</b>
                     </div>
                     <div class="text-center" style="flex: 4;">
                         <b>Matched Account</b>
