--- a/displaytabs/tabs/AccountingUI/BankingTransactions.html
+++ b/displaytabs/tabs/AccountingUI/BankingTransactions.html
@@ -63,7 +63,8 @@
                             <input rowIndex="----" type="text" class="form-control autocomplete editRecordAutoComplete" name="matchAccountCode"
                                 placeholder="" module="BankingTransactionUI" parentModule="BankingUI"
                                 autoname="matchAccountCode" helptitle="matchAccountCode"/>
-                            <span rowindex="----" autoname="matchAccountCode" module="BankingTransactionUI" parentModule="BankingUI" class="btnAutoClearSelected input-group-addon" title="Clear Selected">
+                            <span rowindex="----" autoname="matchAccountCode" module="BankingTransactionUI" parentModule="BankingUI" 
+                                class="btnAutoClearSelected input-group-addon" title="Clear Selected">
                                 <i class="fa fa-remove"></i></span>
                             <div class="autocomplete-items" rowIndex="----" parentModule="BankingUI"
                                 module="BankingTransactionUI" autoname="matchAccountCode">
@@ -123,3 +124,6 @@
             </div>
             <div class="displayRecordTemplate" module="BankingTransactionUI">
             </div>
+        </div>
+    </div>
+</div>
